--- a/Backend/app/build.gradle
+++ b/Backend/app/build.gradle
@@ -5,11 +5,12 @@
  * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.8/userguide/building_java_projects.html in the Gradle documentation.
  */
 
-plugins {
-    id 'org.springframework.boot' version '3.2.5'
-    id 'io.spring.dependency-management' version '1.1.4'
-    id 'java'
-}
+    plugins {
+        id 'org.springframework.boot' version '3.2.5'
+        id 'io.spring.dependency-management' version '1.1.4'
+        id 'java'
+        id 'application'
+    }
 
 repositories {
  
@@ -17,11 +18,23 @@ repositories {
 }
 
 dependencies {
-
+    // 웹소켓 기능
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
-    implementation 'org.springframework.boot:spring-boot-starter'
+    
+    // Spring Data JPA 추가 (데이터베이스 작업을 위함)
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    // PostgreSQL 드라이버 (runtimeOnly로 변경)
+    runtimeOnly 'org.postgresql:postgresql'
+    
+    // 롬복 (보일러플레이트 코드 감소)
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+    
+    // 테스트용
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
+    testCompileOnly 'org.projectlombok:lombok'
+    testAnnotationProcessor 'org.projectlombok:lombok'
 }
 
 
