--- a/Backend/.gitignore
+++ b/Backend/.gitignore
@@ -1,5 +1,8 @@
 # Ignore Gradle project-specific cache directory
 .gradle
 .application.yml
+.env
+
 # Ignore Gradle build output directory
 build
+.vscode/launch.json
