--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,14 +10,18 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native/new-app-screen": "0.81.1",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
+    "@react-navigation/stack": "^7.4.8",
     "@stomp/stompjs": "^7.1.1",
     "@types/sockjs-client": "^1.5.4",
     "@types/stompjs": "^2.3.9",
     "react": "19.1.0",
     "react-native": "0.81.1",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-gesture-handler": "^2.28.0",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.16.0",
     "sockjs-client": "^1.6.1"
@@ -36,6 +40,7 @@
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.0",
     "@types/react-test-renderer": "^19.1.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
