--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,7 +20,6 @@
     "@types/stompjs": "^2.3.9",
     "react": "19.1.0",
     "react-native": "0.81.1",
-    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.16.0",
@@ -36,7 +35,7 @@
     "@react-native/babel-preset": "0.81.1",
     "@react-native/eslint-config": "0.81.1",
     "@react-native/metro-config": "0.81.1",
-    "@react-native/typescript-config": "0.81.1",
+    "@react-native/typescript-config": "^0.81.1",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.0",
     "@types/react-test-renderer": "^19.1.0",
@@ -44,6 +43,7 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-dotenv": "^3.4.11",
     "react-test-renderer": "19.1.0",
     "typescript": "^5.8.3"
   },
