--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,10 +12,11 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native/new-app-screen": "0.81.1",
+    "@react-navigation/bottom-tabs": "^7.4.7",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
     "@react-navigation/stack": "^7.4.8",
-    "@stomp/stompjs": "^7.1.1",
+    "@stomp/stompjs": "^7.2.0",
     "@types/sockjs-client": "^1.5.4",
     "@types/stompjs": "^2.3.9",
     "react": "19.1.0",
