--- a/Frontend/.env
+++ b/Frontend/.env
@@ -3,5 +3,5 @@ API_BASE_URL=http://172.30.1.6:8080
 # API_BASE_URL=http://10.0.2.2:8080
 
 #WebSocket서버 주소
-# WEBSOCKET_URL=http://10.0.2.2:8080/ws-stomp
-WEBSOCKET_URL=http://172.30.1.6:8080/ws-stomp
+# WEBSOCKET_URL=ws://10.0.2.2:8080/ws-stomp
+WEBSOCKET_URL=ws://172.30.1.6:8080/ws-stomp
