--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,7 +1,7 @@
 #Rest API 서버 주소
-API_BASE_URL=http://172.20.10.5:8080
-# API_BASE_URL=http://10.0.2.2:8080
+# API_BASE_URL=http://172.20.10.5:8080
+API_BASE_URL=http://10.0.2.2:8080
 
 #WebSocket서버 주소
 # WEBSOCKET_URL=ws://10.0.2.2:8080/ws-stomp
-WEBSOCKET_URL=http://172.20.10.5:8080/ws-stomp
+# WEBSOCKET_URL=http://172.20.10.5:8080/ws-stomp
