순수  웹소켓으로 변경

--- a/Backend/app/bin/main/application.yml
+++ b/Backend/app/bin/main/application.yml
@@ -28,5 +28,7 @@ application:
 
 logging:
   level:
-    org.springframework.web: DEBUG
-    org.hibernate: ERROR
+   org.springframework.messaging: DEBUG
+   org.springframework.web.socket: DEBUG
+   org.springframework.web: DEBUG
+   org.hibernate: ERROR
