--- a/Backend/app/src/main/resources/application.yml
+++ b/Backend/app/src/main/resources/application.yml
@@ -28,5 +28,7 @@ application:
 
 logging:
   level:
-    org.springframework.web: DEBUG
-    org.hibernate: ERROR
+   org.springframework.messaging: DEBUG
+   org.springframework.web.socket: DEBUG
+   org.springframework.web: DEBUG
+   org.hibernate: ERROR
