--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/stack": "^7.4.8",
     "@reduxjs/toolkit": "^2.9.0",
     "@stomp/stompjs": "^7.2.0",
+    "@types/react-redux": "^7.1.34",
     "@types/sockjs-client": "^1.5.4",
     "@types/stompjs": "^2.3.9",
     "react": "19.1.0",
