--- a/Backend/app/build.gradle
+++ b/Backend/app/build.gradle
@@ -21,6 +21,7 @@ repositories {
 dependencies {
     // 웹소켓 기능
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
     
     // Spring Data JPA 추가 (데이터베이스 작업을 위함)
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
